<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:id="@+id/tvLanguageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>

    <RadioGroup
        android:id="@+id/language_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <RadioButton
            android:id="@+id/radio_vietnamese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vn"
            android:textSize="16sp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:buttonTint="@color/orange_primary"/>

        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:buttonTint="@color/orange_primary"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:backgroundTint="#F0F0F0"
            app:strokeColor="@color/text_grey" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:backgroundTint="@color/orange_primary"
            />

    </LinearLayout>

</LinearLayout>