<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_post"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"/>

    <FrameLayout
        android:id="@+id/layoutAddPhoto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_dash_border"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/tvUploadHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_add_photo"
            android:layout_gravity="center"
            android:drawableStart="@android:drawable/ic_menu_camera"
            android:drawablePadding="8dp"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/duration"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calories_post"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <EditText
        android:id="@+id/etCaption"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/share_hint"
        android:background="@drawable/bg_edittext"
        android:gravity="top"
        android:padding="10dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnSharePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange_primary"
        android:text="@string/share_post"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressBarCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:indeterminateTint="@color/orange_primary" />
</LinearLayout>