<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_arrow_right"
        android:rotation="180"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_workouts"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent"/>

    <HorizontalScrollView
        android:id="@+id/scrollChips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_all"
                android:checkable="true"
                android:checked="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"

                app:chipBackgroundColor="@color/selector_chip_bg"
                android:textColor="@color/selector_chip_text"

                app:chipStrokeWidth="0dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWeightLoss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_weight_loss"
                android:checkable="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"

                app:chipBackgroundColor="@color/selector_chip_bg"
                android:textColor="@color/selector_chip_text"

                app:chipStrokeWidth="0dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMuscleGain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_muscle_gain"
                android:checkable="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"

                app:chipBackgroundColor="@color/selector_chip_bg"
                android:textColor="@color/selector_chip_text"

                app:chipStrokeWidth="0dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipYoga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_yoga"
                android:checkable="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"

                app:chipBackgroundColor="@color/selector_chip_bg"
                android:textColor="@color/selector_chip_text"

                app:chipStrokeWidth="0dp" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWorkouts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/scrollChips"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="48dp"
        android:clipToPadding="false"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>